The winter update.
We are coming, aren't we?

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars Collective</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap" rel="stylesheet">
 
     <style>
         html {
@@ -15,9 +15,9 @@
         }
 
         body {
-            font-family: 'Roboto Condensed', sans-serif;
-            color: #fb3d27;
-            background: #E5E4DB;
+            font-family: 'Rubik Black', sans-serif;
+            color: #fff;
+            background: #791B39;
             display: flex;
             min-height: 80vh;
             align-items: center;
@@ -25,29 +25,21 @@
         }
 
         h1 {
-            font-size: 8rem;
+            font-size: 6rem;
             text-align: center;
             line-height: 1;
             margin: 0 auto;
         }
-
-        span {
-            font-size: 5rem;
-            display: block;
-        }
-
+		
         @media only screen and (max-width: 768px) {
             h1 {
-                font-size: 3.8rem;
-            }
-
-            span {
-                font-size: 1.8rem;
+                font-size: 3rem;
             }
         }
     </style>
 </head>
 <body>
-    <h1>We are Mars <span>and we are coming</span></h1>
+    <h1>We are Mars.</h1>
+	<p>
 </body>
 </html>
