--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         body {
-            font-family: 'Rubik Black', sans-serif;
+            font-family: 'Rubik', sans-serif;
             color: #fff;
             background: #791B39;
             display: flex;
