--- a/index.html
+++ b/index.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mars Collective</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@500;900&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
-        html {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+      html {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-        body {
-            font-family: 'Rubik', sans-serif;
-            color: #fff;
-            background: #791B39;
-            display: flex;
-            min-height: 80vh;
-            align-items: center;
-            padding: 0 20px;
-        }
+      body {
+        font-family: "Rubik", sans-serif;
+        color: #fff;
+        background: #791b39;
+        display: flex;
+        min-height: 80vh;
+        align-items: center;
+        text-align: center;
+        padding: 0 20px;
+      }
 
+      main {
+        margin: auto;
+      }
+
+      h1 {
+        font-size: 6rem;
+        font-weight: 900;
+        text-align: center;
+        line-height: 1;
+        margin-bottom: 80px;
+      }
+
+      a {
+        color: #fff;
+        font-weight: 500;
+        text-decoration: none;
+        transition: 0.5s;
+        padding-bottom: 5px;
+      }
+
+      a:hover {
+        border-bottom: 4px solid white;
+      }
+
+      @media only screen and (max-width: 768px) {
         h1 {
-            font-size: 6rem;
-            text-align: center;
-            line-height: 1;
-            margin: 0 auto;
+          font-size: 3rem;
         }
-		
-        @media only screen and (max-width: 768px) {
-            h1 {
-                font-size: 3rem;
-            }
-        }
+      }
     </style>
-</head>
-<body>
-    <h1>We are Mars.</h1>
-	<p>
-</body>
+  </head>
+  <body>
+    <main>
+      <h1>We are Mars.</h1>
+      <p>
+        <a
+          href="mailto:hi@marscollective.co"
+          alt="Send us a email"
+          target="_blank"
+          rel="noopener noreferrer"
+          >hi@marscollective.co</a
+        >
+      </p>
+    </main>
+  </body>
 </html>
