--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       body {
         font-family: "Rubik", sans-serif;
         color: #fff;
-        background: #791b39;
+        background: #262626;
         display: flex;
         min-height: 80vh;
         align-items: center;
@@ -38,6 +38,10 @@
         text-align: center;
         line-height: 1;
         margin-bottom: 80px;
+      }
+
+      .green {
+        color: #00d1b7;
       }
 
       a {
@@ -61,7 +65,7 @@
   </head>
   <body>
     <main>
-      <h1>We are Mars.</h1>
+      <h1>We are <span class="green">Mars</span>.</h1>
       <p>
         <a
           href="mailto:hi@marscollective.co"
